# GDG

./: .env.example  .gitignore  API_TESTING_GUIDE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DIAGRAM.md  BACKEND_RUNNING.md  BACKGROUND_WORKERS_COMPLETE.md  BASIC_FLOW_DIAGRAM.md  CELERY_SETUP_GUIDE.md  DATASET_OPTIONS_COMPARISON.md  DAY_1_COMPLETE.md  DAY_2_COMPLETE.md  DAY_3_COMPLETE.md  DAY_3_VISUAL_SUMMARY.md  DAY_4_COMPLETE.md  DAY_4_GUIDE.md  DAY_4_TEST_REPORT.md  DEMO_CHEAT_SHEET.md  DEMO_QUICK_REF.md  DEMO_READY.md  DEMO_STATUS.md  DEMO_WITHOUT_API_KEY.md  DEPLOYMENT.md  EXECUTIVE_SUMMARY.md  FRONTEND_ENHANCEMENTS.md  FRONTEND_SETUP.md  FRONTEND_TEST_CHECKLIST.md  GITHUB_PUSH_COMMANDS.md  HACKATHON_SUBMISSION.md  HOW_TO_CHECK_VIOLATIONS.md  IBM_DATASET_DEMO_STRATEGY.md  ISSUES_FIXED.md  LOGGING_AND_MONITORING.md  MENTORSHIP_CHEAT_SHEET.md  MENTORSHIP_CHEAT_SHEET_FINAL.md  MENTORSHIP_PRESENTATION.md  MENTORSHIP_READY.md  OVERNIGHT_FEATURES_COMPLETE.md  OVERNIGHT_PLAN.md  PRODUCTION_FEATURES.md  (+29 more)
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
scripts/: backfill_corrections.py  complete_demo_setup.py  create_sample_policy.py  create_test_scenarios.py  fix_compliance_score.py  load_ibm_dataset.py  migrate_alerts.py  migrate_audit.py  migrate_feedback_loop.py  migrate_overnight_features.py  migrate_predictions.py  migrate_reviews.py  migrate_rule_graph.py  pre_demo_check.sh  quick_demo_setup.py  setup_demo.py  test_graph_features.py
src/: __init__.py  main.py
tests/: __init__.py  test_config.py  test_logging.py
(+103 files in other folders)
